[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/paddle.gd" type="Script" id=1]

[node name="Paddle" type="KinematicBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 108.0, -108.025, 50.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -30.0
margin_top = -16.0
margin_right = 30.0
margin_bottom = 16.0
color = Color( 0.219608, 0.219608, 0.552941, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Normal" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRectLeft" type="ColorRect" parent="Normal"]
margin_left = -64.0
margin_top = -16.0
margin_right = -30.0
margin_bottom = 16.0
color = Color( 0.219608, 0.219608, 0.552941, 1 )

[node name="ColorRectRight" type="ColorRect" parent="Normal"]
margin_left = 30.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = 16.0
color = Color( 0.219608, 0.219608, 0.552941, 1 )

[node name="LongPad" type="Node2D" parent="."]
editor/display_folded = true
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRectLeft" type="ColorRect" parent="LongPad"]
margin_left = -98.0
margin_top = -16.0
margin_right = -64.0
margin_bottom = 16.0
color = Color( 0.219608, 0.219608, 0.552941, 1 )

[node name="ColorRectRight" type="ColorRect" parent="LongPad"]
margin_left = 64.0
margin_top = -16.0
margin_right = 98.0
margin_bottom = 16.0
color = Color( 0.219608, 0.219608, 0.552941, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -64, -16, 64, -16, 64, 16, -64, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="NormalLaser" type="Node2D" parent="."]
editor/display_folded = true
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Left" type="Position2D" parent="NormalLaser"]
editor/display_folded = true
position = Vector2( -50, -21 )

[node name="ColorRect3" type="ColorRect" parent="NormalLaser/Left"]
margin_left = -4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 6.0

[node name="ColorRect22" type="ColorRect" parent="NormalLaser/Left"]
margin_left = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 0, 1 )

[node name="Right" type="Position2D" parent="NormalLaser"]
editor/display_folded = true
position = Vector2( 50, -21 )

[node name="ColorRect" type="ColorRect" parent="NormalLaser/Right"]
margin_left = -4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 6.0

[node name="ColorRect2" type="ColorRect" parent="NormalLaser/Right"]
margin_left = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 0, 1 )

[node name="ShortLaser" type="Node2D" parent="."]
editor/display_folded = true
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Left" type="Position2D" parent="ShortLaser"]
editor/display_folded = true
position = Vector2( -20, -21 )

[node name="ColorRect3" type="ColorRect" parent="ShortLaser/Left"]
margin_left = -4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 6.0

[node name="ColorRect22" type="ColorRect" parent="ShortLaser/Left"]
margin_left = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 0, 1 )

[node name="Right" type="Position2D" parent="ShortLaser"]
editor/display_folded = true
position = Vector2( 20, -21 )

[node name="ColorRect2" type="ColorRect" parent="ShortLaser/Right"]
margin_left = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="ShortLaser/Right"]
margin_left = -4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 6.0

[node name="LongLaser" type="Node2D" parent="."]
editor/display_folded = true
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Left" type="Position2D" parent="LongLaser"]
editor/display_folded = true
position = Vector2( -80, -21 )

[node name="ColorRect3" type="ColorRect" parent="LongLaser/Left"]
margin_left = -4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 6.0

[node name="ColorRect22" type="ColorRect" parent="LongLaser/Left"]
margin_left = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 0, 1 )

[node name="Right" type="Position2D" parent="LongLaser"]
editor/display_folded = true
position = Vector2( 80, -21 )

[node name="ColorRect2" type="ColorRect" parent="LongLaser/Right"]
margin_left = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="LongLaser/Right"]
margin_left = -4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 6.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="Position2D" parent="."]
position = Vector2( -108.025, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="End" type="Position2D" parent="."]
position = Vector2( 108, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TopBoundary" type="Position2D" parent="."]
position = Vector2( 0, -60 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomBoundary" type="Position2D" parent="."]
position = Vector2( 0, 100 )
__meta__ = {
"_edit_lock_": true
}

[node name="Anchor" type="Position2D" parent="."]
position = Vector2( 0, 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="BallSpawn" type="Position2D" parent="."]
position = Vector2( 0, -35.6846 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

